Enable GH actions

--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,18 @@ plugins {
 }
 
 group "dev.cg360.mc"
-version "1.0-SNAPSHOT"
+version "1.0-SNAPSHOT-AM"
 
 repositories {
     mavenLocal()
     maven {
         url = "https://repo.mznt.eu/cubemc"
+        credentials {
+            username = System.getenv("DEPLOY_USERNAME")
+            password = System.getenv("DEPLOY_PASSWORD")
+        }
     }
     mavenCentral()
-}
-
-java {
-    withSourcesJar()
-    withJavadocJar()
 }
 
 dependencies {
@@ -35,8 +34,8 @@ publishing {
         maven {
             url = 'https://repo.mizerak.eu/snapshots'
             credentials {
-                username = "alemiz"
-                password = ""
+                username = System.getenv("DEPLOY_USERNAME")
+                password = System.getenv("DEPLOY_PASSWORD")
             }
         }
     }
