--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ publishing {
     }
     repositories {
         maven {
-            url = 'https://repo.mizerak.eu/snapshots'
+            url = "https://repo.mznt.eu/snapshots"
             credentials {
                 username = System.getenv("DEPLOY_USERNAME")
                 password = System.getenv("DEPLOY_PASSWORD")
