Add MZNT Snapshots repo

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
         }
     }
     maven {
+        name = "MizNet Snapshots"
+        url = "https://repo.mznt.eu/snapshots"
+    }
+    maven {
         name = "Cloudburst Repo"
         url = "https://repo.opencollab.dev/main"
     }
